# Notepad

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/notepad/: CMakeLists.txt  app.cc  app.h  defs.h  text_action.cc  text_action.h  text_buffer.cc  text_buffer.h  text_panel.cc  text_panel.h
